--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test-all": "mocha */*.test.js --watch",
-    "test-00": "mocha */greetFriend.test.js --watch",
+    "test-00": "mocha */greetFriend.test.js ",
     "test-01": "mocha */titleCaseEdit.test.js --watch",
     "test-02": "mocha */subtractFive.test.js --watch",
     "test-03": "mocha */cutInHalfAndFloor.test.js --watch",
